After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760522 - gtk_misc_set_padding not used for size req
gtk_misc_set_padding not used for size req
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-01-12 13:17 UTC by Christoph Reiter (lazka)
Modified: 2016-01-28 11:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
example-python-code (265 bytes, text/plain)
2016-01-12 13:17 UTC, Christoph Reiter (lazka)
  Details
screen recording (146.88 KB, image/gif)
2016-01-12 13:17 UTC, Christoph Reiter (lazka)
  Details
label: use GtkMisc padding again (1.57 KB, patch)
2016-01-28 10:13 UTC, Christoph Reiter (lazka)
committed Details | Review

Description Christoph Reiter (lazka) 2016-01-12 13:17:19 UTC
Created attachment 318859 [details]
example-python-code

ypad seems to be ignored.
Comment 1 Christoph Reiter (lazka) 2016-01-12 13:17:56 UTC
Created attachment 318860 [details]
screen recording
Comment 2 Christoph Reiter (lazka) 2016-01-28 10:13:45 UTC
Created attachment 319908 [details] [review]
label: use GtkMisc padding again
Comment 3 Christoph Reiter (lazka) 2016-01-28 11:18:49 UTC
Thanks

https://git.gnome.org/browse/gtk+/commit
/?id=27263f2387b414707d33862335b7e35b0cf722c3