label: use GtkMisc padding again

this was lost in the gadget conversion in a81267c28e4e0368cd0e23b661e1c8c53f8194fb

https://bugzilla.gnome.org/show_bug.cgi?id=760522